--- a/css/sections/_breadcrumbs.scss
+++ b/css/sections/_breadcrumbs.scss
@@ -3,8 +3,13 @@
   font-size: 12px;
   text-transform: uppercase;
   letter-spacing: 8.6px;
-  padding-top: 10px;
+  padding-top: 20px;
   margin-bottom: 90px;
+
+  &_product {
+
+    margin-bottom: 55px;
+  }
 }
 
 .bread {
