--- a/css/main.css
+++ b/css/main.css
@@ -546,6 +546,10 @@ a {
   top: 0;
 }
 
+.header_product {
+  padding: 50px 0;
+}
+
 .header__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -626,8 +630,12 @@ a {
   font-size: 12px;
   text-transform: uppercase;
   letter-spacing: 8.6px;
-  padding-top: 10px;
+  padding-top: 20px;
   margin-bottom: 90px;
+}
+
+.breads_product {
+  margin-bottom: 55px;
 }
 
 .bread.selected {
@@ -2082,6 +2090,184 @@ a {
   margin-left: 25px;
   width: 30px;
   fill: #4ecdc4;
+}
+
+/*-----------------SECTION-PRODUCT--------------------*/
+.product {
+  padding: 65px 0 90px 0;
+  /* left */
+  /* END left */
+  /* right */
+  /* END right */
+}
+
+.product__left {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin-left: 15px;
+  margin-right: 15px;
+  word-wrap: break-word;
+  width: calc(50% - 30px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.product__img {
+  width: 100%;
+}
+
+.product__right {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin-left: 15px;
+  margin-right: 15px;
+  word-wrap: break-word;
+  width: calc(50% - 30px);
+}
+
+.product__title {
+  color: #333333;
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.product__chars {
+  margin-bottom: 20px;
+}
+
+.product__app {
+  margin-bottom: 35px;
+}
+
+.product__add {
+  color: #4ecdc4;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.product__add-svg {
+  width: 34px;
+  fill: #4ecdc4;
+  margin-left: 19px;
+}
+
+.product__desc {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin-left: 15px;
+  margin-right: 15px;
+  word-wrap: break-word;
+  width: calc(100% - 30px);
+  margin-top: 55px;
+}
+
+.chars {
+  padding-right: 80px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid rgba(183, 183, 183, 0.5);
+}
+
+.char {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  align-items: flex-end;
+  margin-bottom: 25px;
+}
+
+.char:last-child {
+  margin-bottom: 0;
+}
+
+.char__title {
+  color: #333333;
+}
+
+.char__line {
+  background: url(/images/bg/line.png) 0 0 repeat-x;
+  height: 1px;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  margin: 0 10px 5px;
+}
+
+.char__val, .char__link {
+  -ms-flex-preferred-size: 200px;
+  flex-basis: 200px;
+}
+
+.char__val {
+  color: #222222;
+  font-weight: 700;
+}
+
+.char__link {
+  color: #4ecdc4;
+  font-weight: 700;
+}
+
+.app__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-bottom: 25px;
+}
+
+.app__text {
+  color: #333333;
+}
+
+.app__more {
+  color: #999999;
+  font-size: 14px;
+  letter-spacing: 2.8px;
+}
+
+.app__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.app__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  color: #333333;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.app__img {
+  margin-right: 17px;
 }
 
 /*------------------------SECTION-FOOTER---------------------*/
