--- a/css/main.scss
+++ b/css/main.scss
@@ -69,6 +69,8 @@ $font-size: 16px;
 @import "sections/_manufacturer";
 /*-----------------SECTION-INGREDIENTS--------------------*/
 @import "sections/_ingredients";
+/*-----------------SECTION-PRODUCT--------------------*/
+@import "sections/_product";
 /*------------------------SECTION-FOOTER---------------------*/
 @import "sections/_footer";
 /*-----------------SECTION-SOCIALS--------------------*/
