--- a/css/main.scss
+++ b/css/main.scss
@@ -37,6 +37,8 @@ $font-size: 16px;
 @import "layout/_adjustment";
 /*-----------------SECTION-HOVER-ANIM--------------------*/
 @import "layout/_hover-anim";
+/*-----------------SECTION-SPRITE-CONTROLS--------------------*/
+@import "layout/_sprite-controls";
 /*------------------------SECTION-COMMON----------------*/
 @import "layout/_common";
 
