--- a/css/sections/_breadcrumbs.scss
+++ b/css/sections/_breadcrumbs.scss
@@ -4,6 +4,7 @@
   text-transform: uppercase;
   letter-spacing: 8.6px;
   padding-top: 20px;
+  padding-right: 60px;
   margin-bottom: 70px;
 
   &_product {
