--- a/css/sections/_catalog.scss
+++ b/css/sections/_catalog.scss
@@ -20,6 +20,15 @@
     bottom: 0;
     transition: .5s;
 
+    &:hover {
+      .catalog__item-link {
+        color: #00ffed;
+      }
+      .catalog__item-svg {
+        fill: #00ffed;
+      }
+    }
+
     &:nth-child(1) {
       left: 0;
       right: 75%;
@@ -89,12 +98,16 @@
       color: $Medium-turquoise;
       font-size: 24px;
       font-weight: 700;
-
-      &:after {
-          content: url(/images/icons/hmenu-arrow.png);
-          display: inline-block;
-          margin-left: 10px;
-      }
+      display: flex;
+      align-items: center;
+      transition: .3s;
+    }
+    &-svg {
+      padding-top: 5px;
+      width: 50px;
+      fill: $Medium-turquoise;
+      margin-left: 20px;
+      transition: .3s;
     }
   }
 }
