--- a/css/sections/_ingredients.scss
+++ b/css/sections/_ingredients.scss
@@ -62,6 +62,11 @@
       align-items: center;
       color: $Medium-turquoise;
       font-weight: 700;
+      transition: .3s;
+
+      &:hover {
+        color: #00ffed;
+      }
     }
     &-svg {
       margin-left: 25px;
