--- a/css/sections/_product.scss
+++ b/css/sections/_product.scss
@@ -7,7 +7,7 @@
     @include size(12);
 
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
   }
   &__img {
@@ -33,7 +33,6 @@
   }
 
   &__app {
-    margin-bottom: 30px;
   }
 
   &__add {
@@ -93,6 +92,10 @@
   &__link {
     color: $Medium-turquoise;
     font-weight: 700;
+    transition: .3s;
+    &:hover {
+      color: #00ffed;
+    }
   }
 
 }
@@ -114,6 +117,24 @@
     color: $Manatee;
     font-size: 14px;
     letter-spacing: 2.8px;
+    position: relative;
+
+    &.open {
+      .app__more-svg {
+        transform: rotate(90deg);
+      }
+    }
+
+    &-svg {
+      position: absolute;
+      left: calc(100% + 30px);
+      top: 50%;
+      margin-top: -5.5px;
+      width: 11px;
+      fill: $Medium-turquoise;
+      transform: rotate(-90deg);
+      transition: .3s;
+    }
   }
 
   &__list {
@@ -121,6 +142,10 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+  }
+  &__list-hidden {
+    width: 100%;
+    display: none;
   }
   &__item {
     display: flex;
@@ -130,6 +155,7 @@
     font-size: 14px;
     font-weight: 700;
     padding-right: 30px;
+    margin-bottom: 30px;
   }
   &__img {
     margin-right: 17px;
