--- a/css/main.scss
+++ b/css/main.scss
@@ -73,6 +73,14 @@ $font-size: 16px;
 @import "sections/_ingredients";
 /*-----------------SECTION-PRODUCT--------------------*/
 @import "sections/_product";
+/*-----------------SECTION-CAREER--------------------*/
+@import "sections/_career";
+/*-----------------SECTION-NEWS--------------------*/
+@import "sections/_news";
+/*-----------------SECTION-ABOUT--------------------*/
+@import "sections/_about";
+/*-----------------SECTION-REVIEWS--------------------*/
+@import "sections/_reviews";
 /*------------------------SECTION-FOOTER---------------------*/
 @import "sections/_footer";
 /*-----------------SECTION-SOCIALS--------------------*/
