--- a/css/sections/_about.scss
+++ b/css/sections/_about.scss
@@ -1,5 +1,10 @@
 .about {
-  padding: 50px 0;
+  padding-top: 50px;
+
+  &__content {
+    line-height: 1.75;
+    margin-bottom: 50px;
+  }
 
   &__photos {
     display: flex;
