--- a/css/sections/_career.scss
+++ b/css/sections/_career.scss
@@ -3,6 +3,7 @@
 
   &__content {
     margin-bottom: 35px;
+    line-height: 1.75;
   }
 }
 
@@ -52,6 +53,9 @@
   &__subtitle {
     font-size: 14px;
     font-weight: 600;
+  }
+  &__li {
+    font-size: 14px;
   }
 
   &__hidden {
