--- a/css/layout/_fonts.scss
+++ b/css/layout/_fonts.scss
@@ -46,3 +46,10 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'Exo 2';
+  src: url('../fonts/subset-Exo2-Italic.woff2') format('woff2'),
+  url('../fonts/subset-Exo2-Italic.woff') format('woff');
+  font-weight: normal;
+  font-style: italic;
+}
