--- a/css/main.scss
+++ b/css/main.scss
@@ -81,6 +81,8 @@ $font-size: 16px;
 @import "sections/_about";
 /*-----------------SECTION-REVIEWS--------------------*/
 @import "sections/_reviews";
+/*-----------------SECTION-FACES--------------------*/
+@import "sections/_faces";
 /*------------------------SECTION-FOOTER---------------------*/
 @import "sections/_footer";
 /*-----------------SECTION-SOCIALS--------------------*/
