--- a/css/main.scss
+++ b/css/main.scss
@@ -83,6 +83,8 @@ $font-size: 16px;
 @import "sections/_reviews";
 /*-----------------SECTION-FACES--------------------*/
 @import "sections/_faces";
+/*-----------------SECTION-CABINET--------------------*/
+@import "sections/_cabinet";
 /*------------------------SECTION-FOOTER---------------------*/
 @import "sections/_footer";
 /*-----------------SECTION-SOCIALS--------------------*/
